--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.1",
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
