--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.1",
+    "drizzle-orm": "^0.36.0",
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.27.1",
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.2",
     "postcss": "^8.4.47",
