--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "npx drizzle-kit generate && npx drizzle-kit migrate"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.1",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
     "next": "15.0.2",
     "react": "^18.3.1",
@@ -21,6 +23,7 @@
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.2",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "tsx": "^4.19.2"
   }
 }
